# ash-hierarchytemplate

./: .gitignore  Makefile  README.md  create_package.py  package.py  version.py
client/ash_hierarchytemplate/: __init__.py  addon.py  version.py
client/ash_hierarchytemplate/plugins/actions/: apply_hierarchy_template.py
server/: __init__.py
server/settings/: __init__.py  main.py
services/processor/: Dockerfile  Makefile  pyproject.toml  pyproject.toml.example
services/processor/processor/: __init__.py  __main__.py  processor.py
services/processor/processor/handlers/: HierarchyTemplateHandler.py  TaskTemplateHandler.py
