[tool.poetry]
name = "ash-hierarchytemplate-processor"
version = "0.2.2-dev"
description = "Hierarchy Templates for AYON projects"
authors = ["doerp <me@doerp.cool>"]

[tool.poetry.dependencies]
appdirs = "^1.4"
python = ">=3.9,<4.0"
pydantic = "^1.10.2"
nxtools = "^1.6"
ayon-python-api = "^1.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
